--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #f6f8fa;
-}
-
-#root {
-  color: #1db954;
+  background-image: linear-gradient(90deg, #C074B2, #8AB5E8);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+body > #root > #app {
+  height: 100vh;
 }
