--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(90deg, #C074B2, #8AB5E8);
+  background-image: linear-gradient(90deg, #2C5E92 0%, #552F6D 80%);
+  background-color: #1E3264;
 }
 
 code {
@@ -15,4 +16,10 @@ code {
 
 body > #root > #app {
   height: 100vh;
+}
+
+img {
+  object-fit: contain;
+  width: 100%;
+  height: auto;
 }
