Make artist squares clickable and have pointer cursor on focus

--- a/src/components/artistView/ArtistView.css
+++ b/src/components/artistView/ArtistView.css
@@ -1,8 +1,8 @@
 .artist-square {
-  /* background-color: #FFFFFF; */
   background: rgba(255, 255, 255, 0.05);
   height: inherit;
   text-align: center;
+  cursor: pointer;
 }
 
 .content {
