--- a/src/components/artistView/ArtistView.css
+++ b/src/components/artistView/ArtistView.css
@@ -23,3 +23,20 @@
 .artist-row {
     margin-bottom: 2rem;
 }
+
+.settings-header {
+  width: 100%;
+  height: 85px;
+  background: rgb(0, 0, 0, 0.5);
+  margin-bottom: 8rem;
+}
+
+.settings-select {
+  background: rgba(255, 255, 255, 0.05);
+  color: #ffffff;
+}
+
+.settings-label {
+  color:#ffffff;
+  margin-right: 8rem;
+}
